# NPCEquipmentViewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  KEYCODES_PT-BR.md  LICENSE  README.md  build-release.bat  vcpkg.json
.github/workflows/: build.yml
interface/: NPCEquipmentViewerMenu.xml
interface/as2/: NPCEquipmentViewerMenu.as
src/: EquipmentMenu.cpp  EquipmentMenu.h  EquipmentSelectionMenu.cpp  EquipmentSelectionMenu.h  EventHandler.cpp  EventHandler.h  KidWriter.cpp  KidWriter.h  MessageBox.cpp  MessageBox.h  PCH.h  Settings.cpp  Settings.h  UIExtensionsMenu.cpp  UIExtensionsMenu.h  main.cpp
